modules/gdscript/tests/scripts/analyzer/errors/enum_builtin_access.gd
func test():
	print(Vector3.Axis)
